fixed landing page project spacing

--- a/src/scss/_projectCard.scss
+++ b/src/scss/_projectCard.scss
@@ -14,11 +14,13 @@
 
   h3 {
     margin: 0;
+    padding: 0;
   }
 
   p {
     margin: 0;
     margin-bottom: 1rem;
+    max-width: 100%;
   }
 
   a {
